--- a/Sokoban/Sokoban/App.config
+++ b/Sokoban/Sokoban/App.config
@@ -1,14 +1,6 @@
-<<<<<<< HEAD
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
-=======
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
->>>>>>> d268cc066d82912563e93974b5133e4bdb11c0e5
 </configuration>
